fixed overflow in main

--- a/public/style.css
+++ b/public/style.css
@@ -54,6 +54,7 @@ nav {
 
 main {
     grid-area: main;
+    overflow: hidden
 }
 
 footer {
